--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('/api/login', {
+            const response = await fetch('https://angkaraskidder.vercel.app/api/login', {
                 method: 'POST',
                 body: JSON.stringify({ username, password }),
                 headers: { 'Content-Type': 'application/json' },
@@ -52,7 +52,7 @@
         };
 
         async function fetchKeys() {
-            const response = await fetch('/api/generateKey');
+            const response = await fetch('https://angkaraskidder.vercel.app/api/generateKey');
             const data = await response.json();
             const keyList = document.getElementById('key-list');
             keyList.innerHTML = '';
@@ -73,7 +73,7 @@
         document.getElementById('create-key').onclick = async () => {
             const newKey = document.getElementById('new-key').value;
             if (newKey) {
-                await fetch('/api/generateKey', {
+                await fetch('https://angkaraskidder.vercel.app/api/generateKey', {
                     method: 'POST',
                     body: JSON.stringify({ key: newKey }),
                     headers: { 'Content-Type': 'application/json' },
